--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = synapse_auto_accept_invite
 description = "Synapse module to automatically accept invites"
-long_description = file: README.md
+long_description = README.md
 long_description_content_type=text/markdown
-version = 1.0.2
+version = 1.0.5
 classifiers=
     Development Status :: 5 - Production/Stable
     License :: OSI Approved :: Apache Software License
@@ -12,7 +12,9 @@ classifiers=
 
 [options]
 python_requires = >= 3.7
-py_modules= synapse_auto_accept_invite
+#packages = find:synapse_auto_accept_invite
+packages = synapse_auto_accept_invite
+test_suite = tests
 
 [options.extras_require]
 dev =
